chore(subnav): Fix rounded buttons, vertical alignment on iOS

--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -187,6 +187,8 @@
         @media (hover: none) {
           margin-bottom: 1.75rem;
           line-height: 1;
+          display: flex;
+          align-items: center;
         }
       }
       li:last-child {
